@@ -1,5 +1,6 @@
 app-misc/foo
 foo
 ka0ttic@gentoo.org
+none
 http://www.foo.org
 none
