@@ -3,10 +3,12 @@ bar fu
 slarti@gentoo.org
 none
 none
+none
 
 app-misc/foo
 foo
 ka0ttic@gentoo.org
+none
 http://www.foo.org
 none
 
@@ -14,10 +16,12 @@ media-libs/libfoo
 No metadata.xml
 none
 none
+none
 
 sys-ignore/fefifofum
 fu
 vapier@gentoo.org
+none
 none
 SHORT USELESS LONG DESCRIPTION
 
@@ -25,10 +29,12 @@ sys-libs/pfft
 none
 ka0ttic@gentoo.org
 none
+none
 
 
 sys-libs/libfoo
 fu
+none
 none
 none
 none
